# amqp

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  main.cpp
code/src/: broker.cpp  broker.h  client.cpp  client.h  exchange.cpp  exchange.h  frame.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  my_thread.cpp  my_thread.h  producer.cpp  producer.h  queue.cpp  queue.h
outputs/: sample1.txt  sample2.txt  sample3.txt
